--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -2,4 +2,39 @@
 
 /* 回答はここに書いてね */
 
+.q2-wrapper {
+  width: 940px;
+  margin: auto;
+}
+
+.gray-box {
+  width: 940px;
+  padding: 20px;
+  background-color: #eff3f4;
+  box-sizing: border-box;
+}
+
+.q2-box {
+  width: 900px;
+}
+.q2-text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+.photo-left {
+  float:left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.photo-right {
+  float:right;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+
+
 /* 回答はここに書いてね */
