--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,5 +1,33 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q3-table {
+  table-layout: fixed;
+  width: 100%;
+  text-align: center;
+}
+
+.q3-table th {
+  background-color: #2244aa;
+  font-size: 18px;
+  line-height: 26px;
+  color: white;
+  padding: 10px;
+  border: solid #dedede 1px;
+}
+
+.q3-table td {
+  font-size: 16px;
+  line-height: 22px;
+  padding: 10px;
+  border: solid #dedede 1px
+}
+.q3-table tr:nth-child(2n) {
+  background-color: #ecf1f2;
+}
+
+.q3-table tbody tr:last-child {
+  border-top: dashed #000 2px;
+}
 
 /* 回答はここに書いてね */
