--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,98 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q5 {
+  width: 500px;
+  height: 500px;
+  padding: 40px;
+  background-color: #ECF1F2;
+  margin: 0 auto;
+  position: relative;
+  box-sizing: border-box;
+}
 
+[class^="q5-box"] {
+  text-align: center;
+  line-height: 100px;
+  color: black;
+  font-weight: bold;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+}
+
+.q5-box1 {
+  z-index: 1;
+  top: 40px;
+  left: 200px;
+  background-color: #ffefd3;
+}
+
+.q5-box8:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 80px;
+  background-color: #ffefd3;
+  width: 20px;
+  height: 20px;
+}
+
+.q5-box2 {
+  z-index: 2;
+  top: 120px;
+  left: 280px;
+  background-color: #7084de;
+}
+
+.q5-box3 {
+  z-index: 3;
+  top: 200px;
+  left: 360px;
+  background-color: #d0ecea;
+}
+
+.q5-box4 {
+  z-index: 4;
+  top: 280px;
+  left: 280px;
+  background-color: #8b7a5e;
+}
+
+.q5-box5 {
+  z-index: 5;
+  top: 360px;
+  left: 200px;
+  background-color: #9fd6d2;
+}
+
+.q5-box6 {
+  z-index: 6;
+  top: 280px;
+  left: 120px;
+  background-color: #fffee4;
+}
+
+.q5-box7 {
+  z-index: 7;
+  top: 200px;
+  left: 40px;
+  background-color: #deae70;
+}
+
+.q5-box8 {
+  z-index: 8;
+  top: 120px;
+  left: 120px;
+  background-color: #de70cf;
+}
+
+.q5-box9 {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: #2b69a3;
+}
 /* 回答はここに書いてね */
