--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -2,4 +2,82 @@
 
 /* 回答はここに書いてね */
 
+.q6__box__content1 {
+  background-color: #e6f2ff;
+  width: 90px;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.q6__text1 {
+  text-align: center;
+}
+
+.q6__text2 {
+  width: 90px;
+  padding: 10px 0;
+  background-color:#e6f2ff;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.q6.q6--around.table {
+  display: table;
+}
+
+.q6--around--box {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.q6--around--text1 {
+  display: inline-block;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.q6.q6--around.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.q6--around--text2 {
+  background-color: #fff;
+  padding: 10px;
+}
+
+
+.q6__box.is-stable {
+  position: relative;
+}
+
+.q6__box.is-flexible {
+  position: relative;
+}
+
+.q6__box__inner1 {
+  background-color: #e6f2ff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 110px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.q6__box__inner2 {
+  background-color: #e6f2ff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  padding: 10px;
+}
+
 /* 回答はここに書いてね */
