--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -2,4 +2,82 @@
 
 /* 回答はここに書いてね */
 
+.q8__photo { 
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+
+.q8__photo img {
+  width: 100%;
+  transition-duration: 0.5s;
+}
+
+.q8__photo:hover img {
+  transform: scale(1.5,1.5);
+  transition-duration: 0.5s;
+}
+
+.q8__text {
+  opacity: 0;
+  font-size:  16px;
+  line-height: 16px;
+  color:	white;
+  word-break: break-all;
+  position: absolute;
+  bottom: -100%;
+  padding: 20px;
+  transition-duration: 0.5s;
+}
+
+.q8__mask {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition-duration: 0.5s;
+  background: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,8));
+} 
+
+.q8__photo:hover .q8__mask {
+  opacity: 1;
+}
+
+.q8__photo:hover .q8__text {
+  opacity: 1;
+  bottom: 0;
+}
+
+.q8__circle {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 10px solid #ecf1f2;
+  border-top-color: #00bcd4;
+  box-sizing: border-box;
+  animation-name: rotation;
+  animation-duration: 1.1s;
+  animation-timing-function: linear;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-play-state: running;
+  animation-fill-mode: none;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* 回答はここに書いてね */
