レイアウトパーツの修正をしました。

--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -3,8 +3,8 @@
 /* 回答はここに書いてね */
 
 .q8__photo { 
-  width: 500px;
-  height: 333px;
+  width: 50%;
+  height: 50%;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
