--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-[class^="q5-box"] {
+.q5-box {
   text-align: center;
   line-height: 100px;
   color: black;
@@ -22,14 +22,14 @@
   font-size: 20px;
 }
 
-.q5-box1 {
+.is-1 {
   z-index: 1;
   top: 40px;
   left: 200px;
   background-color: #ffefd3;
 }
 
-.q5-box8:after {
+.is-8:after {
   content: "";
   display: block;
   position: absolute;
@@ -40,56 +40,56 @@
   height: 20px;
 }
 
-.q5-box2 {
+.is-2 {
   z-index: 2;
   top: 120px;
   left: 280px;
   background-color: #7084de;
 }
 
-.q5-box3 {
+.is-3 {
   z-index: 3;
   top: 200px;
   left: 360px;
   background-color: #d0ecea;
 }
 
-.q5-box4 {
+.is-4 {
   z-index: 4;
   top: 280px;
   left: 280px;
   background-color: #8b7a5e;
 }
 
-.q5-box5 {
+.is-5 {
   z-index: 5;
   top: 360px;
   left: 200px;
   background-color: #9fd6d2;
 }
 
-.q5-box6 {
+.is-6 {
   z-index: 6;
   top: 280px;
   left: 120px;
   background-color: #fffee4;
 }
 
-.q5-box7 {
+.is-7 {
   z-index: 7;
   top: 200px;
   left: 40px;
   background-color: #deae70;
 }
 
-.q5-box8 {
+.is-8 {
   z-index: 8;
   top: 120px;
   left: 120px;
   background-color: #de70cf;
 }
 
-.q5-box9 {
+.is-9 {
   position: fixed;
   top: 10px;
   left: 10px;
