--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -1,46 +1,42 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.clearfix:after {
-    display: block;
-    content: "";
-    clear: both;
-  }
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
 
-.q7__box {
+.q7 .q7__box {
   width: 225px;
 }
 
-.q7--float.q7__box {
+.q7__box.is-float {
   float: left;
   margin-left: 50px;
   font-size: 16px;
   box-sizing: border-box;
 }
 
-.q7--float.q7__box:first-child {
+.q7__box.is-float:first-child {
   margin-left: 0;
 }
 
-.q7--table.q7__inner {
+.q7--table .q7__inner {
   display: table;
 }
 
-.q7--table.q7__box {
+.q7__box.is-table {
   display: table-cell;
   vertical-align: middle;
   padding-left: 50px;
 }
 
-.q7--table.q7__box__text {
-  font-size: 16px;
-}
-
-.q7--table.q7__box:first-child {
+.q7--table .q7__box:first-child {
   padding-left: 0;
 }
 
-.q7--inlineblock.q7__box {
+.q7__box.is-inlineblock {
   display: inline-block;
   font-size: 16px;
   margin-left: 50px;
@@ -48,44 +44,37 @@
   box-sizing: border-box;
 } 
 
-.q7--inlineblock.q7__box:first-child {
+.q7__box.is-inlineblock:first-child {
   margin-left: 0;
 }
 
-.q7--inlineblock.q7__inner {
+.q7__inner.is-inlineblock {
   font-size: 0;
 }
 
-.q7--flex.q7__inner {
-  display:flex;
+.q7__inner.is-flex {
+  display: flex;
   justify-content: space-around;
   align-items: flex-end;
 }
 
-.q7--flex.q7__box {
+.q7__box.is-flex {
   font-size: 16px;
   vertical-align: middle;
   box-sizing: border-box;
 }
 
-.q7--margin.q7__inner.is-full {
+.q7--margin .q7__inner {
   font-size: 0;
-  box-sizing: border-box;
 }
 
-.q7--margin.q7__box {
-  display: inline-block;
-  box-sizing: border-box;
-  margin-left: 50px;
-  font-size: 16px;
-  vertical-align: middle;
+.q7--margin .q7__box {
+  vertical-align: top;
 }
 
 .q7__box.is-fixed {
   display: inline-block;
   width: 300px;
-  vertical-align: top;
-  box-sizing: border-box;
 }
 
 .q7__box.is-flexible {
@@ -94,10 +83,9 @@
   margin-left: -300px;
   padding-left: 350px;
   box-sizing: border-box;
-  vertical-align: top;
 }
 
-.q7--margin.q7__box__text {
+.q7--margin .q7__box__text {
   font-size: 16px;
 }
 
