--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -14,21 +14,21 @@
   background: white;
 }
 
-.q9__balloon:before {
+.q9__balloon:before,
+.q9__balloon:after {
   content: "";
   position: absolute;
-  bottom: -45px;
   left: 30px;
   border: 20px solid transparent;
+}
+
+.q9__balloon:before {
+  bottom: -45px;
   border-top-color: #222;
 }
 
 .q9__balloon:after {
-  content: "";
-  position: absolute;
   bottom: -38px;
-  left: 30px;
-  border: 20px solid transparent;
   border-top-color: white;
 }
 
